colour palette changed

--- a/src/static/css/libs/_vars.scss
+++ b/src/static/css/libs/_vars.scss
@@ -33,13 +33,13 @@
 
 // Palette.
 	$palette: (
-		bg:							#ffffff,
-		bg-alt:						#f4f4f4,
-		fg:							#646464,
-		fg-bold:					#3c3b3b,
+		bg:							#141414,
+		bg-alt:						#14213d,
+		fg:							#e5e5e5,
+		fg-bold:					#ffffff,
 		fg-light:					#aaaaaa,
 		border:						rgba(160,160,160,0.3),
 		border-bg:					rgba(160,160,160,0.075),
 		border-alt:					rgba(160,160,160,0.65),
-		accent:						#2e59ba
+		accent:						#fca311
 	);
