updated border colours

--- a/src/static/css/libs/_vars.scss
+++ b/src/static/css/libs/_vars.scss
@@ -38,8 +38,8 @@
 		fg:							#e5e5e5,
 		fg-bold:					#ffffff,
 		fg-light:					#aaaaaa,
-		border:						rgba(160,160,160,0.3),
-		border-bg:					rgba(160,160,160,0.075),
-		border-alt:					rgba(160,160,160,0.65),
+		border:						rgba(255, 255, 255, 0.5),
+		border-bg:					rgba(255, 255, 255, 0.3),
+		border-alt:					rgba(255,255,255,0.3),
 		accent:						#fca311
 	);
